added delete_animal function

--- a/test.ipynb
+++ b/test.ipynb
@@ -44,155 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exhibits_no = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_n = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_ne = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_o = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_c = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_e = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_so = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_s = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}\n",
-    "exhibits_se = {\n",
-    "  \"exhibit_1\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_2\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_3\" : np.empty(4, dtype=object),\n",
-    "  \"exhibit_4\" : np.empty(4, dtype=object),\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zoo = {\n",
-    "  1: np.empty(1, dtype=object),\n",
-    "  2: exhibits_n,\n",
-    "  3: exhibits_ne,\n",
-    "  4: exhibits_o,\n",
-    "  5: exhibits_c,\n",
-    "  6: exhibits_e,\n",
-    "  7: exhibits_so,\n",
-    "  8: exhibits_s,\n",
-    "  9: exhibits_se\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "global zoo = {\n",
-    "            1: np.empty(1, dtype=object),\n",
-    "            2: np.empty(1, dtype=object),\n",
-    "            3: np.empty(1, dtype=object),\n",
-    "            4: np.empty(1, dtype=object),\n",
-    "            5: np.empty(1, dtype=object),\n",
-    "            6: np.empty(1, dtype=object),\n",
-    "            7: np.empty(1, dtype=object),\n",
-    "            8: np.empty(1, dtype=object),\n",
-    "            9: np.empty(1, dtype=object)\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zoo = {\n",
-    "  1: np.empty(1, dtype=object),\n",
-    "  2: np.empty(1, dtype=object),\n",
-    "  3: np.empty(1, dtype=object),\n",
-    "  4: np.empty(1, dtype=object),\n",
-    "  5: np.empty(1, dtype=object),\n",
-    "  6: np.empty(1, dtype=object),\n",
-    "  7: np.empty(1, dtype=object),\n",
-    "  8: np.empty(1, dtype=object),\n",
-    "  9: np.empty(1, dtype=object)\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zoo[1][\"exhibit_1\"][0] = \"tiger\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(zoo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,63 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 291,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(zoo[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: [], 2: [], 3: [], 4: [], 5: [], 6: [], 7: [], 8: [], 9: []}"
-      ]
-     },
-     "execution_count": 314,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zoo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zoo[1]['birds'] = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,6 +136,12 @@
     "    section_id = find_section(exhibit_name)\n",
     "    if section_id == None:\n",
     "        print(\"Exhibit name: \" + exhibit_name + \" not found in assigned exhibits\")\n",
+    "        if len(unassigned_exhibits[exhibit_name]) < 5:\n",
+    "            unassigned_exhibits[exhibit_name].append(animal_name)\n",
+    "            print(\"Animal \" + animal_name + \" added to unassigned exhibition \" + exhibit_name)\n",
+    "        else:\n",
+    "            print(\"Error: The exhibit selected (\" + exhibit_name + \") is full.\")  \n",
+    "            print(\"Animal \" + animal_name + \" cannot be added\") \n",
     "    elif len(zoo[section_id][exhibit_name]) < 5:\n",
     "        zoo[section_id][exhibit_name].append(animal_name)\n",
     "    else:\n",
@@ -348,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,64 +160,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1: [], 2: [], 3: [], 4: [], 5: [], 6: [], 7: [], 8: [], 9: []}\n"
+      "Exhibition fish added to list of unassigned exhibits\n",
+      "Exhibit name: fish not found in assigned exhibits\n",
+      "Animal gold_fish added to unassigned exhibition fish\n",
+      "Exhibit name: fish not found in assigned exhibits\n",
+      "Animal shark added to unassigned exhibition fish\n"
      ]
     }
    ],
    "source": [
-    "report_zoo()"
+    "add_exhibit(\"fish\")\n",
+    "add_animal(\"gold_fish\", \"fish\")\n",
+    "add_animal(\"shark\", \"fish\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exhibit cats added to section 1\n"
+     ]
     }
    ],
    "source": [
-    "len(zoo[1]) > 0"
+    "add_exhibit(\"cats\", 1)\n",
+    "add_animal(\"tiger\", \"cats\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 319,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zoo[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +220,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bird_exhibit': ['perrot', 'eagle'], 'fish': ['gold_fish', 'shark']}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unassigned_exhibits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['perrot', 'eagle', 'gold_fish', 'shark']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[a for s in unassigned_exhibits.keys() for a in unassigned_exhibits[s]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gold_fish\n",
+      "shark\n",
+      "tiger\n",
+      "perrot\n",
+      "eagle\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in zoo.keys():\n",
+    "    for n in zoo[s].keys():\n",
+    "        for a in zoo[s][n]:\n",
+    "            print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -451,13 +301,71 @@
        " 9: {}}"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "zoo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assigned_animals = [a for s in zoo.keys() for n in zoo[s].keys() for a in zoo[s][n]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['perrot', 'eagle']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "assigned_animals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zoo[1][\"bird_exhibit\"].remove(\"perrot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eagle'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zoo[1][\"bird_exhibit\"][0]"
    ]
   },
   {
